Codigo Formulario y Buscar por Telefono

--- a/src/trabajopractico5/vistas/Desktop.form
+++ b/src/trabajopractico5/vistas/Desktop.form
@@ -26,11 +26,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Buscar por Apellido"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarporapellidoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jmiBuscarporciudad">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Buscar por ciudad"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiBuscarporciudadActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -39,10 +45,13 @@
             <Property name="text" type="java.lang.String" value="Editar"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jmiEditardirectorio">
+            <MenuItem class="javax.swing.JMenuItem" name="jmiAgregarcontacto">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Agregar y Eliminar Contactos"/>
+                <Property name="text" type="java.lang.String" value="Agregar contacto"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiAgregarcontactoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -55,6 +64,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Salir"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiSalirActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
